--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,167 +1,340 @@
 {% extends "layouts/base.html" %}
 
 {% block page_header %}
-<h1>&nbsp&nbspJacob Farnsworth</h1>
+<img src="/static/jake.png" alt="Photo of Jake" class="pic"/>
 {% endblock %}
 
 {% block menu %}
-<h2><em>&raquoTake a gander at 
-    <a href="http://www.baroquebloke.com" target="_blank">My Photography</a>.
-    <br>&raquoRead my resume below or <a href="/static/FarnsworthResume.pdf" 
-      download="Jacob Farnsworth's Resume">Download It Here</a>.
-    <br>&raquoHave some questions?  Feel free to 
-    <a href="mailto:jake@baroquebloke.com">Get In Touch</a>.</em></h2>
+<div class="name">
+	<h1>
+		Jacob Farnsworth
+	</h1>
+</div>
+<ul>
+	<li>
+		Head over to my 
+    <a href="https://github.com/baroquebloke" target="_blank">My GitHub</a>
+	</li>
+	<li>
+    Read my resume below or <a href="/static/FarnsworthResume.pdf" 
+       target="_blank">Download PDF</a>
+	</li>
+	<li>
+    Have questions?  Feel free to 
+    <a href="mailto:jake@baroquebloke.com">Get In Touch</a></em></h2>
+	</li>
+</ul>	
 {% endblock %}
 
 {% block personal %}
-<h2>The Lowdown<br>...</h2>
-<p>Having done my time in higher education, I decided to start the long and 
+<h2>
+	The Lowdown
+</h2>
+<h2>
+	...
+</h2>
+<p>
+	Having done my time in higher education, I decided to start the long and 
   arduous path to recovery.  Along the way, I've developed a great eye for 
   photography, a fondness for good bread, old scifi, and 
   <a href="http://www.ouaismaisbon.ch" class="french" 
     target="_blank">bizarre French humor</a>.  
-  <br></p>
-<p>Next stop?  Embracing my inner nerd.</p>
+</p>
+<p>
+	Next stop?  Embracing my inner nerd.
+</p>
 {% endblock %}
 
 {% block why_programming %}
-<h2>What Brought Me Here?<br>...</h2>
-<p>When I was younger, I fell in love with music.  This proceeded to guide my 
+<h2>
+	What Brought Me Here?
+</h2>
+<h2>
+	...
+</h2>
+<p>
+	When I was younger, I fell in love with music.  This proceeded to guide my 
   life for well over a decade, through highschool, a couple years at 
   Florida State University, and finally to Oberlin Conservatory.  
   While there, I met a girl who, unbeknownst to me, would steal me away to
-  France and eventually become my wife.</p>
-<p>Though we're stateside again, those two years abroad helped me realize that, 
+  France and eventually become my wife.
+</p>
+<p>
+	Though we're stateside again, those two years abroad helped me realize that, 
   despite my love for music, performance did not allow me to use my mind in 
   the ways I wanted.  So with the help of my wife, cheap wine, and expensive 
   moldy cheese I made the decision to head in a different direction: 
-  programming.</p>
-<p>In a way, programming is not unlike music and French combined.  There is 
+  programming.
+</p>
+<p>
+	In a way, programming is not unlike music and French combined.  There is 
   still the challenge and excitement of learning a foreign language but also 
   the thrill of creating something beautiful.  
-  I've been hooked ever since.</p>
+  I've been hooked ever since.
+</p>
 {% endblock %}
 
 {% block skillz %}
-<h2>Skills<br>...</h2>
-<p>On an average day, I am a treasure trove of various skills and abilities,  
-  including, but not limited to:</p>
-<h3>Code</h3>
+<h2>
+	Skills
+</h2>
+<h2>
+	...
+</h2>
+<p>
+	On an average day, I am a treasure trove of skills and abilities,  
+  including, but not limited to:
+</p>
+<h3>
+	Code
+</h3>
 <ul>
-  <li>HTML5</li>
-  <li>CSS3</li>
-  <li>Python</li>
-  <li>Building websites with Flask</li>
-  <li>All of the above via the terminal and VIM</li>
-</ul><br>
-<h3>Computers</h3>
+  <li>
+		HTML5
+	</li>
+  <li>
+		CSS3
+	</li>
+  <li>
+		Python
+	</li>
+  <li>
+		Building websites with Flask
+	</li>
+	<li>
+		Learning to use Django
+	</li>
+  <li>
+		All of the above via the terminal and VIM
+	</li>
+</ul>
+<h3>
+	Computers
+</h3>
 <ul>
-  <li>Strong knowledge and maintenance of Linux, Mac OS X, and Windows</li>
-</ul><br>
-<h3>Organ Building and Maintenance</h3>
+  <li>
+	Strong knowledge and maintenance of Linux, Mac OS X, and Windos
+</li>
+</ul>
+<h3>
+	Organ Building and Maintenance
+</h3>
 <ul>
-  <li>Not that you do, but if you had a pipe organ I could maintain it</li>
-  <li>Various construction and building techniques</li>
-  <li>Competency with wide range of power tools and equipment</li>
-</ul><br>
-<h3>Photography</h3>
+  <li>
+		Not that you do, but if you had a pipe organ I could maintain it
+	</li>
+  <li>
+		Various construction and building techniques
+	</li>
+  <li>
+		Competency with wide range of power tools and equipment
+	</li>
+</ul>
+<h3>
+	Photography
+</h3>
 <ul>
-  <li>Professional quality, print worthy photos</li>
-  <li>Consistent results with equipment ranging from iPhones to DSLR's</li>
-  <li>Photoshop, Aperture, Corel Aftershot Pro, and more</li>
-</ul><br>
-<h3>French</h3>
+  <li>
+		Professional quality, print worthy photos
+	</li>
+  <li>
+		Consistent results with equipment ranging from iPhones to DSLR's
+	</li>
+  <li>	
+		Photoshop, Aperture, Corel Aftershot Pro, and more
+	</li>
+</ul>
+<h3>
+	French
+</h3>
 <ul>
-  <li>Spoken and written proficiency</li>
-  <li>Masterful use of exasperated facial expressions 
-    and wild gesticulations</li>
-</ul><br>
-<h3>Bonus</h3>
+  <li>
+		Spoken and written proficiency
+	</li>
+  <li>
+		Masterful use of exasperated facial expressions and wild gesticulations
+	</li>
+</ul>
+<h3>
+	Bonus
+</h3>
 <ul>
-  <li>Great sense of humor</li>
-  <li>Most of my home brew gets given away to friends</li>
-  <li>I never shy at getting my hands dirty</li>
+  <li>
+		Great sense of humor
+	</li>
+  <li>
+		Most of my home brew gets given to friends
+	</li>
+  <li>
+		I never shy at getting my hands dirty
+	</li>
 </ul>
 {% endblock %}
 
 {% block hireMe %}
-<h2>Hire Me Already!<br>...</h2>
-<p>I'm looking for a job where I can use my love and knowledge of technology 
+<h2>
+	Hire Me Already!
+</h2>
+<h2>
+	...
+</h2>
+<p>
+	I'm looking for a job where I can use my love and knowledge of technology 
   every day, in an environment that will challenge my abillities, and allow 
-  me to grow.</p>
-<p>You need someone who learns fast on their feet, works well with others, and 
-  strives to provide original and appealing solutions to tasks at hand.</p>
-<p>With my unique background and skill set, I can give you the youthful energy 
+  me to grow.
+</p>
+<p>
+	You need someone who learns fast on their feet, works well with others, and 
+  strives to provide original and appealing solutions to tasks at hand.
+</p>
+<p>
+	With my unique background and skill set, I can give you the youthful energy 
   of a recent graduate, a strong eye for detail with the desire to always
   find a better way, and the enthusiasm and loyalty of someone who is 
-  excited to learn something new every day.</p>
-<p>Hire me and you won't be disappointed.</p>
+  excited to learn something new every day.
+</p>
+<p>
+	Hire me and you won't be disappointed.
+</p>
 {% endblock %}
 
 {% block resume %}
-<h2>Resume<br>...</h2>
-<h3>Education</h3>
+<h2>
+	Resume
+</h2>
+<h2>
+	...
+</h2>
+<h3>
+	Education
+</h3>
 <ul>
-  <li><b>Bachelor of Music <i>2014</i> - Oberlin Conservatory of Music</b></li>
+  <li>
+		Bachelor of Music <em>2014</em> - Oberlin Conservatory of Music
+	</li>
   <ul>
-    <li>major: baroque flute performance</li>
-    <li>Conservatory Dean's Scholar</li>
+    <li>
+			major: Baroque Flute performance
+		</li>
+    <li>
+			Conservatory Dean's Scholar
+		</li>
   </ul>
-  <li><b>CRR de Paris, France <i>2011 - 2012</i></b></li>
+  <li>
+		CRR de Paris, France <em>2011 - 2012</em>
+	</li>
   <ul>
-    <li>French baroque music studies</li>
+    <li>
+			French baroque music studies
+		</li>
   </ul>
-  <li><b>Campus Langues, Paris <i>2012 - 2013</i></b></li>
+	<li>
+		Campus Langues, Paris <em>2012 - 2013</em>
+	</li>
   <ul>
-    <li>French language studies</li>
+    <li>
+			French language studies
+		</li>
   </ul>
-  <li><b>Florida State University <i>2006 - 2008</i></b></li>
+  <li>
+		Florida State University <em>2006 - 2008</em>
+	</li>
   <ul>
-    <li>coursework: general studies and flute performance</li>
+    <li>
+			coursework: general studies and flute performance
+		</li>
   </ul>
 </ul>
-<h3>Work Experience</h3>
+<h3>
+	Work Experience
+</h3>
 <ul>
-  <li><b>Pipe Organ Technical Assistant <i>2009 - present</i></b></li>
+	<li>
+		Coffe shop grunt <em>2014 - 2015</em>
+	</li>
+	<ul>
+		<li>
+			as shift leader: responsible for opening, closing, and running many 
+			aspects of day-to-day business
+		</li>
+	</ul>
+  <li>
+		Pipe Organ Technical Assistant <em>2009 - present</em>
+	</li>
   <ul>
-    <li>Trained under supervision of Hal Gober, curator of Organs
-      for Oberlin Conservatory.  Responsible for general maintenance of 
-      Oberlin's numerous pipe organs</li>
+    <li>
+			Trained under supervision of Hal Gober, curator of Organs for Oberlin 
+			Conservatory.  Responsible for general maintenance of Oberlin's numerous 
+			pipe organs
+		</li>
   </ul>
-  <li><b>Sales Assistant and Fabricator for Country Popcorn, 
-      Paris France <i>2011 - 2013</i></b></li>
+  <li>
+		Sales Assistant and Fabricator for Country Popcorn, Paris France <em>2011 - 
+		2013</em>
+	</li>
   <ul>
-    <li>Responsible for care of the work truck, set up and maintenance of
-      equipment</li>
-    <li>Cooked kettle corn by hand</li>
-    <li>Interacted with large crowds of diverse nationalities and 
-      languages</li>
+    <li>
+			Responsible for care of the work truck, set up and maintenance of
+      equipment
+		</li>
+    <li>
+			Cooked kettle corn by hand
+		</li>
+    <li>
+			Interacted with large crowds of diverse nationalities and languages
+		</li>
   </ul>
-  <li><b>Freelance Construction Work <i>2009 - present</i></b></li>
+  <li>
+		Freelance Construction Work <em>2009 - present</em>
+	</li>
   <ul>
-    <li>framing, drywall instalation, demolition, remodeling, electrical, 
-      and plumbing projects</li>
+    <li>
+			framing, drywall instalation, demolition, remodeling, electrical, and 
+			plumbing projects
+		</li>
   </ul>
 </ul>
-<h3>Relevant Coursework</h3>
+<h3>
+	Relevant Coursework
+</h3>
 <ul>
-  <li>Python Programming, winter term projects working independently, 
-    website design</li>
+	<li>
+		Python Programming, winter term projects working independently, website 
+		design
+	</li>
 </ul>
-<h3>Skills</h3>
+<h3>
+	Skills
+</h3>
 <ul>
-  <li>Strong knowledge of operating systems and maintenance of Linux, 
-    Mac OS X, and Windows</li>
-  <li>Computer programming and web design</li>
-  <li>Photography experience using many types of cameras, equipment, 
-    and techniques</li>
-  <li>Photo editing including Photoshop and Aperture</li>
-  <li>Working proficiency in French</li>
-  <li>Competency with power tools, woodworking, and general construction 
-    techniques</li>
+  <li>
+		Strong knowledge of operating systems and maintenance of Linux, Mac OS X, 
+		and Windows
+	</li>
+  <li>
+		Computer programming and web design
+	</li>
+  <li>
+		Photography experience using many types of cameras, equipment, and 
+		techniques
+	</li>
+  <li>
+		Photo editing including Photoshop and Aperture
+	</li>
+  <li>
+		Working proficiency in French
+	</li>
+  <li>
+		Competency with power tools, woodworking, and general construction 
+		techniques
+	</li>
 </ul>
 {% endblock %}
 
 {% block page_footer %}
-<p>This is my foot</p>
+<img src="/static/side_left.png" alt="Left Foot" class="left-foot"/>
+<img src="/static/side_right.png" alt="Right Foot" class="right-foot"/>
+<p>
+	This is my foot
+</p>
 {% endblock %}
