--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block page_header %}
-<img src="/static/jake.png" alt="Photo of Jake" class="pic"/>
+<img src="/static/jake.jpg" alt="Photo of Jake" class="pic"/>
 {% endblock %}
 
 {% block menu %}
@@ -21,7 +21,7 @@
 	</li>
 	<li>
     Have questions?  Feel free to 
-    <a href="mailto:jake@baroquebloke.com">Get In Touch</a></em></h2>
+    <a href="mailto:jake@baroquebloke.com">Get In Touch</a>
 	</li>
 </ul>	
 {% endblock %}
@@ -332,9 +332,6 @@
 {% endblock %}
 
 {% block page_footer %}
-<img src="/static/side_left.png" alt="Left Foot" class="left-foot"/>
-<img src="/static/side_right.png" alt="Right Foot" class="right-foot"/>
 <p>
-	This is my foot
 </p>
 {% endblock %}
