--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -16,6 +16,10 @@
     <a href="https://github.com/baroquebloke" target="_blank">My GitHub</a>
 	</li>
 	<li>
+		<a href="http://www.parkerramsay.com" target="_blank">One</a> or
+		<a href="http://www.heatherkirkconnell.com" target="_blank">Two</a>
+		other sites of mine
+	<li>
     Read my resume below or <a href="/static/FarnsworthResume.pdf" 
        target="_blank">Download PDF</a>
 	</li>
@@ -29,9 +33,6 @@
 {% block personal %}
 <h2>
 	The Lowdown
-</h2>
-<h2>
-	...
 </h2>
 <p>
 	Having done my time in higher education, I decided to start the long and 
@@ -48,9 +49,6 @@
 {% block why_programming %}
 <h2>
 	What Brought Me Here?
-</h2>
-<h2>
-	...
 </h2>
 <p>
 	When I was younger, I fell in love with music.  This proceeded to guide my 
@@ -77,9 +75,6 @@
 {% block skillz %}
 <h2>
 	Skills
-</h2>
-<h2>
-	...
 </h2>
 <p>
 	On an average day, I am a treasure trove of skills and abilities,  
@@ -175,9 +170,6 @@
 <h2>
 	Hire Me Already!
 </h2>
-<h2>
-	...
-</h2>
 <p>
 	I'm looking for a job where I can use my love and knowledge of technology 
   every day, in an environment that will challenge my abillities, and allow 
@@ -201,9 +193,6 @@
 {% block resume %}
 <h2>
 	Resume
-</h2>
-<h2>
-	...
 </h2>
 <h3>
 	Education
@@ -332,6 +321,4 @@
 {% endblock %}
 
 {% block page_footer %}
-<p>
-</p>
 {% endblock %}
