--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -108,7 +108,7 @@
 </h3>
 <ul>
   <li>
-	Strong knowledge and maintenance of Linux, Mac OS X, and Windos
+	Strong knowledge and maintenance of Linux, Mac OS X, and Windows
 </li>
 </ul>
 <h3>
