--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -52,7 +52,7 @@
 </h2>
 <p>
 	When I was younger, I fell in love with music.  This proceeded to guide my 
-  life for well over a decade, through highschool, a couple years at 
+  life for well over a decade, through high school, a couple years at 
   Florida State University, and finally to Oberlin Conservatory.  
   While there, I met a girl who, unbeknownst to me, would steal me away to
   France and eventually become my wife.
@@ -239,7 +239,7 @@
 </h3>
 <ul>
 	<li>
-		Coffe shop grunt <em>2014 - 2015</em>
+		Coffee shop grunt <em>2014 - 2015</em>
 	</li>
 	<ul>
 		<li>
@@ -278,7 +278,7 @@
 	</li>
   <ul>
     <li>
-			framing, drywall instalation, demolition, remodeling, electrical, and 
+			framing, drywall installation, demolition, remodeling, electrical, and 
 			plumbing projects
 		</li>
   </ul>
